--- a/code/core/src/main/resources/ikube/common/spring.properties
+++ b/code/core/src/main/resources/ikube/common/spring.properties
@@ -21,7 +21,7 @@ file.max.read.length=1000000
 throttle=0
 max.actions=3
 # Max index size before another one is started in megs
-max.index.size=6000
+max.index.size=5000
 
 # These are client specific for Lucene
 analyzed=true
@@ -50,16 +50,20 @@ language.word.lists.directory.index=./ikube/common/languages/index
 
 searcher.web.service.url=http://ikube.be/ikube/service/search/multi/spatial
 
+# The start and end tier of the geohash
+start.tier=10
+end.tier=20
+
 ################################################
 ## These properties should generally not be modified by clients               ##
 ################################################
 
 # The delay before the scheduled tasks start executing
-delay=600000
-delay-delta=610000
+delay=20000
+delay-delta=6100000
 # The period between notifications for timed tasks
-period=600000
-period-delta=610000
+period=60000
+period-delta=6100000
 # The maximum age of the GeoSpatial index
 max.age.geospatial=6000
 
