--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,8 @@
 ikube-war=ikube.war
 ikube-configuration-jar=configuration.jar
 
+host-server=192.168.1.4
+
 sleep=30
 
 target-directory=code/war/target
