--- a/pom.xml
+++ b/pom.xml
@@ -56,8 +56,7 @@
 	<modules>
 		<module>code/core</module>
 		<module>code/war</module>
-		<!-- <module>code/web</module> -->
-		<!-- <module>code/gui</module> -->
+		<module>code/site</module>
 		<!-- <module>code/libs</module> -->
 		<!-- <module>code/tool</module> -->
 	</modules>
@@ -1127,7 +1126,6 @@
 			<url>http://evgeny-goldin.org/artifactory/plugins-releases/</url>
 		</pluginRepository>
 	</pluginRepositories>
-
 
 	<reporting>
 		<plugins>
