Added some more to the site.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1130 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/build.xml
+++ b/build.xml
@@ -36,12 +36,6 @@
 	<target name="clean-servers">
 		<antcall target="execute-remote-command">
 			<param name="command" value="
-				rm -r /usr/share/apache-tomcat-7.0.27/bin/ikube;
-				rm -r /usr/share/apache-tomcat-7.0.27/webapps/ikube*;
-				rm -r /usr/share/apache-tomcat-7.0.27/logs;
-				mkdir -p /usr/share/apache-tomcat-7.0.27/bin/ikube;
-				mkdir -p /usr/share/apache-tomcat-7.0.27/logs;
-				
 				rm -r /usr/share/apache-tomcat-6.0.29-2/webapps/ikube*;
 				rm -r /usr/share/apache-tomcat-6.0.29-1/logs;
 				mkdir -p /usr/share/apache-tomcat-6.0.29-1/logs;
@@ -66,14 +60,10 @@
 		<echo>User home: ${user-home}</echo>
 		<copy file="${output-configuration-directory}/${ikube-configuration-jar}" todir="code/core/src/main/webapp/docs" failonerror="true" />
 		<!-- Deploy configuration on server -->
-		<antcall target="copy-directory-to-server">
-			<param name="directory-to-copy" value="${output-configuration-directory}" />
-			<param name="server-directory" value="/usr/share/apache-tomcat-7.0.27/bin/ikube" />
-		</antcall>
 		<!-- antcall target="copy-directory-to-server">
 			<param name="directory-to-copy" value="${output-configuration-directory}" />
 			<param name="server-directory" value="/usr/share/apache-tomcat-6.0.29-1/bin/ikube" />
-		</antcall>
+		</antcall -->
 		<antcall target="copy-directory-to-server">
 			<param name="directory-to-copy" value="${output-configuration-directory}" />
 			<param name="server-directory" value="/usr/share/apache-tomcat-6.0.29-2/bin/ikube" />
@@ -81,30 +71,26 @@
 		<antcall target="copy-directory-to-server">
 			<param name="directory-to-copy" value="${output-configuration-directory}" />
 			<param name="server-directory" value="/usr/share/apache-tomcat-6.0.29-3/bin/ikube" />
-		</antcall -->
+		</antcall>
 	</target>
 
 	<!-- Deploys the war to all the servers. -->
 	<target name="deploy-ikube">
 		<!-- Deploy to the server -->
 		<antcall target="copy-to-server">
-			<param name="server-directory" value="${userid}:${password}@${host-server}:/usr/share/apache-tomcat-7.0.27/webapps" />
-		</antcall>
-		<antcall target="copy-to-server">
 			<param name="server-directory" value="${userid}:${password}@${host-server}:/usr/share/apache-tomcat-6.0.29-1/webapps" />
 		</antcall>
-		<!-- antcall target="copy-to-server">
+		<antcall target="copy-to-server">
 			<param name="server-directory" value="${userid}:${password}@${host-server}:/usr/share/apache-tomcat-6.0.29-2/webapps" />
 		</antcall>
 		<antcall target="copy-to-server">
 			<param name="server-directory" value="${userid}:${password}@${host-server}:/usr/share/apache-tomcat-6.0.29-3/webapps" />
-		</antcall -->
+		</antcall>
 	</target>
 
 	<target name="chmod-servers">
 		<antcall target="execute-remote-command">
 			<param name="command" value="
-					chmod 777 -R /usr/share/apache-tomcat-7.0.27;
 					chmod 777 -R /usr/share/apache-tomcat-6.0.29-1;
 					chmod 777 -R /usr/share/apache-tomcat-6.0.29-2;
 					chmod 777 -R /usr/share/apache-tomcat-6.0.29-3;" />
@@ -115,8 +101,9 @@
 	<target name="start-servers">
 		<antcall target="execute-remote-command">
 			<param name="command" value="
-				cd /usr/share/apache-tomcat-7.0.27/bin; ./startup.sh;
-				cd /usr/share/apache-tomcat-6.0.29-1/bin; ./startup.sh;" />
+				cd /usr/share/apache-tomcat-6.0.29-1/bin; ./startup.sh;
+				cd /usr/share/apache-tomcat-6.0.29-2/bin; ./startup.sh;
+				cd /usr/share/apache-tomcat-6.0.29-3/bin; ./startup.sh;" />
 		</antcall>
 	</target>
 
