--- a/code/core/src/main/resources/ikube/common/spring.properties
+++ b/code/core/src/main/resources/ikube/common/spring.properties
@@ -19,9 +19,9 @@ internet.batch.size=10000
 file.batch.size=10000
 file.max.read.length=1000000
 throttle=0
-max.actions=3
+max.actions=1
 # Max index size before another one is started in megs
-max.index.size=6000
+max.index.size=3000
 
 # These are client specific for Lucene
 analyzed=true
@@ -70,7 +70,7 @@ max.age.geospatial=6000
 # The number of minutes before the throttle is increased
 cpu.load.period=3
 # Whether this listener is active and will modify the throttle
-cpu.load.active=false
+cpu.load.active=true
 # The maximum load per cpu before the throttle is increased for all indexes
 cpu.load.threshold=0.9
 # Whether to use the stop words in the analyzer
