--- a/build.properties
+++ b/build.properties
@@ -1,17 +1,13 @@
 ikube-war=ikube.war
 ikube-configuration-jar=configuration.jar
 
-host-server=192.168.1.4
-
 sleep=30
 
 target-directory=code/war/target
 configuration-directory=code/core/src/main/resources/ikube
 output-configuration-directory=code/war/target/ikube
 
-tomcat=/usr/share/apache-tomcat-7.0.33
-tomcat-bin=${tomcat}/bin
-tomcat-webapps=${tomcat}/webapps
-
 tomcat-zip=apache-tomcat-7.0.33.zip
 tomcat-unpacked=apache-tomcat-7.0.33
+
+verbose=true
