--- a/build.xml
+++ b/build.xml
@@ -10,12 +10,78 @@
 
 	<target name="go">
 		<antcall target="prepare" />
-		<antcall target="stop-servers" />
-		<antcall target="clean-servers" />
-		<antcall target="deploy-configuration" />
-		<antcall target="deploy-ikube" />
-		<antcall target="chmod-servers" />
-		<antcall target="start-servers" />
+		<antcall target="stop-servers-deploy-site" />
+		<!-- Deploy the configuration and ikube and start the servers -->
+		<antcall target="go-server" inheritall="true">
+			<param name="server-ip" value="192.168.1.4" />
+			<param name="tomcat-home" value="/usr/share/apache-tomcat-6.0.29-1" />
+		</antcall>
+		<antcall target="go-server" inheritall="true">
+			<param name="server-ip" value="192.168.1.6" />
+			<param name="tomcat-home" value="/usr/share/apache-tomcat-7.0.27" />
+		</antcall>
+		<antcall target="go-server" inheritall="true">
+			<param name="server-ip" value="192.168.1.7" />
+			<param name="tomcat-home" value="/usr/share/apache-tomcat-7.0.27" />
+		</antcall>
+	</target>
+
+	<target name="stop-servers-deploy-site">
+		<!-- Stop all the processes, the only way to stop Tomcat -->
+		<antcall target="execute-remote-command">
+			<param name="server-ip" value="192.168.1.4" />
+			<param name="command" value="killall java" />
+		</antcall>
+		<antcall target="execute-remote-command">
+			<param name="server-ip" value="192.168.1.6" />
+			<param name="command" value="killall java" />
+		</antcall>
+		<antcall target="execute-remote-command">
+			<param name="server-ip" value="192.168.1.7" />
+			<param name="command" value="killall java" />
+		</antcall>
+		<antcall target="deploy-ikube-site">
+			<param name="server-ip" value="192.168.1.4" />
+			<param name="tomcat-home" value="/usr/share/apache-tomcat-7.0.27" />
+		</antcall>
+		<antcall target="execute-remote-command">
+			<param name="server-ip" value="192.168.1.4" />
+			<param name="command" value="cd /usr/share/apache-tomcat-7.0.27/bin; ./startup.sh;" />
+		</antcall>
+	</target>
+
+	<target name="go-server">
+		<!-- Clean all the output folders and the configuration -->
+		<antcall target="execute-remote-command">
+			<param name="server-ip" value="${server-ip}" />
+			<param name="command" value="
+				rm -r ${tomcat-home}/bin/ikube;
+				rm -r ${tomcat-home}/webapps/ikube*;
+				rm -r ${tomcat-home}/logs;
+				mkdir -p ${tomcat-home}/bin/ikube;
+				mkdir -p ${tomcat-home}/logs;" />
+		</antcall>
+		<!-- Deploy the configuration to the server -->
+		<antcall target="copy-directory-to-server">
+			<param name="server-ip" value="${server-ip}" />
+			<param name="directory-to-copy" value="${output-configuration-directory}" />
+			<param name="server-directory" value="${tomcat-home}/bin/ikube" />
+		</antcall>
+		<!-- Deploy Ikube to the server -->
+		<antcall target="copy-file-to-server">
+			<param name="file-to-copy" value="${target-directory}/${ikube-war}" />
+			<param name="server-directory" value="${tomcat-home}/webapps" />
+		</antcall>
+		<!-- Change the directory permissions just in case -->
+		<antcall target="execute-remote-command">
+			<param name="server-ip" value="${server-ip}" />
+			<param name="command" value="chmod 777 -R ${tomcat-home};" />
+		</antcall>
+		<!-- Start the server -->
+		<antcall target="execute-remote-command">
+			<param name="server-ip" value="${server-ip}" />
+			<param name="command" value="cd ${tomcat-home}/bin; ./startup.sh;" />
+		</antcall>
 	</target>
 
 	<target name="prepare">
@@ -27,112 +93,24 @@
 		<antcall target="zip-tomcat" />
 	</target>
 
-	<target name="stop-servers">
-		<antcall target="execute-remote-command">
-			<param name="command" value="killall java" />
-		</antcall>
-	</target>
-
-	<target name="clean-servers">
-		<antcall target="execute-remote-command">
-			<param name="command" value="
-				rm -r /usr/share/apache-tomcat-6.0.29-1/bin/ikube;
-				rm -r /usr/share/apache-tomcat-6.0.29-1/webapps/ikube*;
-				rm -r /usr/share/apache-tomcat-6.0.29-1/logs;
-				mkdir -p /usr/share/apache-tomcat-6.0.29-1/bin/ikube;
-				mkdir -p /usr/share/apache-tomcat-6.0.29-1/logs;
-						  
-				rm -r /usr/share/apache-tomcat-6.0.29-2/bin/ikube;
-				rm -r /usr/share/apache-tomcat-6.0.29-2/webapps/ikube*;
-				rm -r /usr/share/apache-tomcat-6.0.29-2/logs;
-				mkdir -p /usr/share/apache-tomcat-6.0.29-2/bin/ikube;
-				mkdir -p /usr/share/apache-tomcat-6.0.29-2/logs;
-						  
-				rm -r /usr/share/apache-tomcat-6.0.29-3/bin/ikube;
-				rm -r /usr/share/apache-tomcat-6.0.29-3/webapps/ikube*;
-				rm -r /usr/share/apache-tomcat-6.0.29-3/logs;
-				mkdir -p /usr/share/apache-tomcat-6.0.29-3/bin/ikube;
-				mkdir -p /usr/share/apache-tomcat-6.0.29-3/logs;" />
-		</antcall>
-	</target>
-
-	<!-- This target will deploy the configuration to the servers. -->
-	<target name="deploy-configuration">
-		<echo>User dir: ${user-dir}</echo>
-		<echo>User home: ${user-home}</echo>
-		<copy file="${output-configuration-directory}/${ikube-configuration-jar}" todir="code/core/src/main/webapp/docs" failonerror="true" />
-		<!-- Deploy configuration on server -->
-		<antcall target="copy-directory-to-server">
-			<param name="directory-to-copy" value="${output-configuration-directory}" />
-			<param name="server-directory" value="/usr/share/apache-tomcat-6.0.29-1/bin/ikube" />
-		</antcall>
-		<antcall target="copy-directory-to-server">
-			<param name="directory-to-copy" value="${output-configuration-directory}" />
-			<param name="server-directory" value="/usr/share/apache-tomcat-6.0.29-2/bin/ikube" />
-		</antcall>
-		<antcall target="copy-directory-to-server">
-			<param name="directory-to-copy" value="${output-configuration-directory}" />
-			<param name="server-directory" value="/usr/share/apache-tomcat-6.0.29-3/bin/ikube" />
-		</antcall>
-	</target>
-
-	<!-- Deploys the war to all the servers. -->
-	<target name="deploy-ikube">
-		<!-- Deploy to the server -->
-		<antcall target="copy-to-server">
-			<param name="server-directory" value="${userid}:${password}@${host-server}:/usr/share/apache-tomcat-6.0.29-1/webapps" />
-		</antcall>
-		<antcall target="copy-to-server">
-			<param name="server-directory" value="${userid}:${password}@${host-server}:/usr/share/apache-tomcat-6.0.29-2/webapps" />
-		</antcall>
-		<antcall target="copy-to-server">
-			<param name="server-directory" value="${userid}:${password}@${host-server}:/usr/share/apache-tomcat-6.0.29-3/webapps" />
-		</antcall>
-	</target>
-
 	<target name="deploy-ikube-site">
-		<scp file="code/site/target/site.war" todir="${userid}:${password}@${host-server}:/usr/share/apache-tomcat-7.0.27/webapps" trust="true" failonerror="false" />
+		<scp file="code/site/target/site.war" todir="${userid}:${password}@${server-ip}:${tomcat-home}/webapps" trust="true" failonerror="false" verbose="${verbose}" />
 	</target>
 
-	<target name="chmod-servers">
-		<antcall target="execute-remote-command">
-			<param name="command" value="
-				chmod 777 -R /usr/share/apache-tomcat-7.0.27;
-				chmod 777 -R /usr/share/apache-tomcat-6.0.29-1;
-				chmod 777 -R /usr/share/apache-tomcat-6.0.29-2;
-				chmod 777 -R /usr/share/apache-tomcat-6.0.29-3;" />
-		</antcall>
+	<target name="copy-directory-to-server">
+		<scp todir="${userid}:${password}@${server-ip}:${server-directory}" trust="true" failonerror="false" verbose="${verbose}">
+			<fileset dir="${directory-to-copy}" />
+		</scp>
 	</target>
 
-	<!-- cd /usr/share/apache-tomcat-6.0.29-1/bin; ./startup.sh; -->
-	<target name="start-servers">
-		<antcall target="execute-remote-command">
-			<param name="command" value="
-				cd /usr/share/apache-tomcat-7.0.27/bin; ./startup.sh;
-				cd /usr/share/apache-tomcat-6.0.29-1/bin; ./startup.sh;
-				cd /usr/share/apache-tomcat-6.0.29-2/bin; ./startup.sh;
-				cd /usr/share/apache-tomcat-6.0.29-3/bin; ./startup.sh;" />
-		</antcall>
-	</target>
-
-	<!-- 
-		This target will unpack Tomcat, put the war in the web apps directory, unpack the configuration to the 
-		bin directory, then zip everything up again into a zip for distribution/deployment.
-	-->
-	<target name="zip-tomcat">
-		<unzip dest="${target-directory}" src="code/libs/tools/${tomcat-zip}" />
-		<unjar src="${output-configuration-directory}/${ikube-configuration-jar}" dest="${target-directory}/${tomcat-unpacked}/bin/ikube" overwrite="true" />
-		<zip destfile="${target-directory}/${tomcat-zip}" compress="true" filesonly="false" update="false" whenempty="skip">
-			<zipfileset dir="${target-directory}/${tomcat-unpacked}" prefix="${tomcat-unpacked}" />
-		</zip>
-	</target>
-
-	<target name="copy-to-server">
-		<scp file="${target-directory}/${ikube-war}" todir="${server-directory}" trust="true" failonerror="false" />
+	<target name="copy-file-to-server">
+		<scp todir="${userid}:${password}@${server-ip}:${server-directory}" trust="true" failonerror="false" verbose="${verbose}">
+			<fileset file="${file-to-copy}" />
+		</scp>
 	</target>
 
 	<target name="execute-remote-command">
-		<sshexec host="${host-server}" trust="true" username="${userid}" password="${password}" command="${command}" failonerror="false" />
+		<sshexec host="${server-ip}" trust="true" username="${userid}" password="${password}" command="${command}" failonerror="false" />
 	</target>
 
 	<!-- 
@@ -156,18 +134,27 @@
 			<fileset dir="code/core/src/main/resources/ikube/${profile}" />
 		</copy>
 	</target>
-	<target name="jar-configuration">
+
+	<target name="jar-configuration" description="Packages the configuration into a jar for uploading to Artifactory">
 		<jar destfile="${output-configuration-directory}/${ikube-configuration-jar}" basedir="${output-configuration-directory}" />
+		<copy file="${output-configuration-directory}/${ikube-configuration-jar}" todir="code/core/src/main/webapp/docs" failonerror="true" />
 	</target>
-	<target name="deploy-configuration-for-jetty">
+
+	<target name="deploy-configuration-for-jetty" description="Copies the configuration folder to the base of the project modules so Jetty can start">
 		<unjar src="${output-configuration-directory}/${ikube-configuration-jar}" dest="code/core/ikube" overwrite="true" />
 		<unjar src="${output-configuration-directory}/${ikube-configuration-jar}" dest="code/war/ikube" overwrite="true" />
 	</target>
 
-	<target name="copy-directory-to-server">
-		<scp todir="${userid}:${password}@${host-server}:${server-directory}" trust="true" failonerror="false">
-			<fileset dir="${directory-to-copy}" />
-		</scp>
+	<!-- 
+			This target will unpack Tomcat, put the war in the web apps directory, unpack the configuration to the 
+			bin directory, then zip everything up again into a zip for distribution/deployment.
+		-->
+	<target name="zip-tomcat">
+		<unzip dest="${target-directory}" src="code/libs/tools/${tomcat-zip}" />
+		<unjar src="${output-configuration-directory}/${ikube-configuration-jar}" dest="${target-directory}/${tomcat-unpacked}/bin/ikube" overwrite="true" />
+		<zip destfile="${target-directory}/${tomcat-zip}" compress="true" filesonly="false" update="false" whenempty="skip">
+			<zipfileset dir="${target-directory}/${tomcat-unpacked}" prefix="${tomcat-unpacked}" />
+		</zip>
 	</target>
 
 </project>
