--- a/code/libs/pom.xml
+++ b/code/libs/pom.xml
@@ -16,11 +16,20 @@
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
-		<version>4.0.3-SNAPSHOT</version>
+		<version>4.1.3-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
+	
+	<properties>
+		<phase>release</phase>
+		<packaging>jar</packaging>
+		<generate-pom>true</generate-pom>
+		<repository-id>ikube</repository-id>
+		<artifactory>http://www.ikube.be/artifactory/libs-release-local</artifactory>
+	</properties>
 
 	<build>
+		<finalName>configuration</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -32,16 +41,16 @@
 						<goals>
 							<goal>deploy-file</goal>
 						</goals>
-						<phase>deploy</phase>
+						<phase>${phase}</phase>
 						<configuration>
 							<groupId>com.ibm.db2.jcc</groupId>
 							<artifactId>db2jcc4</artifactId>
 							<version>9.7.2</version>
-							<packaging>jar</packaging>
-							<generatePom>true</generatePom>
 							<file>drivers/db2jcc4-9.7.2.jar</file>
-							<repositoryId>ikube</repositoryId>
-							<url>http://www.ikube.be:8080/artifactory/libs-release-local</url>
+							<packaging>${packaging}</packaging>
+							<generatePom>${generate-pom}</generatePom>
+							<repositoryId>${repository-id}</repositoryId>
+							<url>${artifactory}</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -49,16 +58,16 @@
 						<goals>
 							<goal>deploy-file</goal>
 						</goals>
-						<phase>deploy</phase>
+						<phase>${phase}</phase>
 						<configuration>
 							<groupId>com.ibm.db2.jcc_license_cu</groupId>
 							<artifactId>db2jcc_license_cu</artifactId>
 							<version>9.7.2</version>
-							<packaging>jar</packaging>
 							<file>drivers/db2jcc_license_cu-9.7.2.jar</file>
-							<generatePom>true</generatePom>
-							<repositoryId>ikube</repositoryId>
-							<url>http://www.ikube.be:8080/artifactory/libs-release-local</url>
+							<packaging>${packaging}</packaging>
+							<generatePom>${generate-pom}</generatePom>
+							<repositoryId>${repository-id}</repositoryId>
+							<url>${artifactory}</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -66,16 +75,16 @@
 						<goals>
 							<goal>deploy-file</goal>
 						</goals>
-						<phase>deploy</phase>
+						<phase>${phase}</phase>
 						<configuration>
 							<groupId>oracle.ojdbc6</groupId>
 							<artifactId>ojdbc6</artifactId>
 							<version>11</version>
-							<packaging>jar</packaging>
 							<file>drivers/ojdbc6-11.jar</file>
-							<generatePom>true</generatePom>
-							<repositoryId>ikube</repositoryId>
-							<url>http://www.ikube.be:8080/artifactory/libs-release-local</url>
+							<packaging>${packaging}</packaging>
+							<generatePom>${generate-pom}</generatePom>
+							<repositoryId>${repository-id}</repositoryId>
+							<url>${artifactory}</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -83,16 +92,16 @@
 						<goals>
 							<goal>deploy-file</goal>
 						</goals>
-						<phase>deploy</phase>
+						<phase>${phase}</phase>
 						<configuration>
 							<groupId>org.nfunk</groupId>
 							<artifactId>jep</artifactId>
 							<version>2.4.1</version>
-							<packaging>jar</packaging>
 							<file>tools/jep-2.4.1.jar</file>
-							<generatePom>true</generatePom>
-							<repositoryId>ikube</repositoryId>
-							<url>http://www.ikube.be:8080/artifactory/libs-release-local</url>
+							<packaging>${packaging}</packaging>
+							<generatePom>${generate-pom}</generatePom>
+							<repositoryId>${repository-id}</repositoryId>
+							<url>${artifactory}</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -100,16 +109,16 @@
 						<goals>
 							<goal>deploy-file</goal>
 						</goals>
-						<phase>deploy</phase>
+						<phase>${phase}</phase>
 						<configuration>
 							<groupId>aspose</groupId>
 							<artifactId>aspose.cells</artifactId>
 							<version>7.0.0</version>
-							<packaging>jar</packaging>
 							<file>aspose/aspose-cells-7.0.0.jar</file>
-							<generatePom>true</generatePom>
-							<repositoryId>ikube</repositoryId>
-							<url>http://www.ikube.be:8080/artifactory/libs-release-local</url>
+							<packaging>${packaging}</packaging>
+							<generatePom>${generate-pom}</generatePom>
+							<repositoryId>${repository-id}</repositoryId>
+							<url>${artifactory}</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -117,16 +126,16 @@
 						<goals>
 							<goal>deploy-file</goal>
 						</goals>
-						<phase>deploy</phase>
+						<phase>${phase}</phase>
 						<configuration>
 							<groupId>aspose</groupId>
 							<artifactId>aspose.pdf</artifactId>
 							<version>2.9.0</version>
-							<packaging>jar</packaging>
 							<file>aspose/aspose-pdf-2.9.0-jdk16.jar</file>
-							<generatePom>true</generatePom>
-							<repositoryId>ikube</repositoryId>
-							<url>http://www.ikube.be:8080/artifactory/libs-release-local</url>
+							<packaging>${packaging}</packaging>
+							<generatePom>${generate-pom}</generatePom>
+							<repositoryId>${repository-id}</repositoryId>
+							<url>${artifactory}</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -134,16 +143,16 @@
 						<goals>
 							<goal>deploy-file</goal>
 						</goals>
-						<phase>deploy</phase>
+						<phase>${phase}</phase>
 						<configuration>
 							<groupId>aspose</groupId>
 							<artifactId>aspose.slides</artifactId>
 							<version>2.6.0</version>
-							<packaging>jar</packaging>
 							<file>aspose/aspose.slides-2.6.0.jar</file>
-							<generatePom>true</generatePom>
-							<repositoryId>ikube</repositoryId>
-							<url>http://www.ikube.be:8080/artifactory/libs-release-local</url>
+							<packaging>${packaging}</packaging>
+							<generatePom>${generate-pom}</generatePom>
+							<repositoryId>${repository-id}</repositoryId>
+							<url>${artifactory}</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -151,16 +160,16 @@
 						<goals>
 							<goal>deploy-file</goal>
 						</goals>
-						<phase>deploy</phase>
+						<phase>${phase}</phase>
 						<configuration>
 							<groupId>aspose</groupId>
 							<artifactId>aspose.words</artifactId>
 							<version>7.0.0</version>
-							<packaging>jar</packaging>
 							<file>aspose/aspose.words.jdk16-7.0.0.jar</file>
-							<generatePom>true</generatePom>
-							<repositoryId>ikube</repositoryId>
-							<url>http://www.ikube.be:8080/artifactory/libs-release-local</url>
+							<packaging>${packaging}</packaging>
+							<generatePom>${generate-pom}</generatePom>
+							<repositoryId>${repository-id}</repositoryId>
+							<url>${artifactory}</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -168,16 +177,16 @@
 						<goals>
 							<goal>deploy-file</goal>
 						</goals>
-						<phase>deploy</phase>
+						<phase>${phase}</phase>
 						<configuration>
 							<groupId>canyon</groupId>
 							<artifactId>canyon</artifactId>
 							<version>0.9.8</version>
-							<packaging>jar</packaging>
 							<file>tools/canyon-0.9.8.jar</file>
-							<generatePom>true</generatePom>
-							<repositoryId>ikube</repositoryId>
-							<url>http://www.ikube.be:8080/artifactory/libs-release-local</url>
+							<packaging>${packaging}</packaging>
+							<generatePom>${generate-pom}</generatePom>
+							<repositoryId>${repository-id}</repositoryId>
+							<url>${artifactory}</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -185,16 +194,16 @@
 						<goals>
 							<goal>deploy-file</goal>
 						</goals>
-						<phase>deploy</phase>
+						<phase>${phase}</phase>
 						<configuration>
 							<groupId>jai</groupId>
 							<artifactId>jai.codec</artifactId>
 							<version>1.1.3</version>
-							<packaging>jar</packaging>
 							<file>tools/jai_codec-1.1.3-alpha.jar</file>
-							<generatePom>true</generatePom>
-							<repositoryId>ikube</repositoryId>
-							<url>http://www.ikube.be:8080/artifactory/libs-release-local</url>
+							<packaging>${packaging}</packaging>
+							<generatePom>${generate-pom}</generatePom>
+							<repositoryId>${repository-id}</repositoryId>
+							<url>${artifactory}</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -202,16 +211,16 @@
 						<goals>
 							<goal>deploy-file</goal>
 						</goals>
-						<phase>deploy</phase>
+						<phase>${phase}</phase>
 						<configuration>
 							<groupId>lzma</groupId>
 							<artifactId>jio</artifactId>
 							<version>1.1.3</version>
-							<packaging>jar</packaging>
 							<file>tools/lzma-4.63-jio-0.94.jar</file>
-							<generatePom>true</generatePom>
-							<repositoryId>ikube</repositoryId>
-							<url>http://www.ikube.be:8080/artifactory/libs-release-local</url>
+							<packaging>${packaging}</packaging>
+							<generatePom>${generate-pom}</generatePom>
+							<repositoryId>${repository-id}</repositoryId>
+							<url>${artifactory}</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -219,16 +228,16 @@
 						<goals>
 							<goal>deploy-file</goal>
 						</goals>
-						<phase>deploy</phase>
+						<phase>${phase}</phase>
 						<configuration>
 							<groupId>sevenzip</groupId>
 							<artifactId>jbinding</artifactId>
 							<version>4.65.1</version>
-							<packaging>jar</packaging>
 							<file>tools/linux/sevenzipjbinding-4.65.1.jar</file>
-							<generatePom>true</generatePom>
-							<repositoryId>ikube</repositoryId>
-							<url>http://www.ikube.be:8080/artifactory/libs-release-local</url>
+							<packaging>${packaging}</packaging>
+							<generatePom>${generate-pom}</generatePom>
+							<repositoryId>${repository-id}</repositoryId>
+							<url>${artifactory}</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -236,16 +245,16 @@
 						<goals>
 							<goal>deploy-file</goal>
 						</goals>
-						<phase>deploy</phase>
+						<phase>${phase}</phase>
 						<configuration>
 							<groupId>sevenzip</groupId>
 							<artifactId>jbinding-linux</artifactId>
 							<version>4.65.1</version>
-							<packaging>jar</packaging>
 							<file>tools/linux/sevenzipjbinding-AllLinux-4.65.1.jar</file>
-							<generatePom>true</generatePom>
-							<repositoryId>ikube</repositoryId>
-							<url>http://www.ikube.be:8080/artifactory/libs-release-local</url>
+							<packaging>${packaging}</packaging>
+							<generatePom>${generate-pom}</generatePom>
+							<repositoryId>${repository-id}</repositoryId>
+							<url>${artifactory}</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -253,16 +262,16 @@
 						<goals>
 							<goal>deploy-file</goal>
 						</goals>
-						<phase>deploy</phase>
+						<phase>${phase}</phase>
 						<configuration>
 							<groupId>sevenzip</groupId>
 							<artifactId>jbinding-windows</artifactId>
 							<version>4.65.1</version>
-							<packaging>jar</packaging>
 							<file>tools/windoze/sevenzipjbinding-AllWindows-4.65.1.jar</file>
-							<generatePom>true</generatePom>
-							<repositoryId>ikube</repositoryId>
-							<url>http://www.ikube.be:8080/artifactory/libs-release-local</url>
+							<packaging>${packaging}</packaging>
+							<generatePom>${generate-pom}</generatePom>
+							<repositoryId>${repository-id}</repositoryId>
+							<url>${artifactory}</url>
 						</configuration>
 					</execution>
 					<execution>
@@ -270,16 +279,16 @@
 						<goals>
 							<goal>deploy-file</goal>
 						</goals>
-						<phase>deploy</phase>
+						<phase>${phase}</phase>
 						<configuration>
 							<groupId>sshxcute</groupId>
 							<artifactId>sshxcute</artifactId>
 							<version>1.0.0</version>
-							<packaging>jar</packaging>
 							<file>tools/sshxcute-1.0.0.jar</file>
-							<generatePom>true</generatePom>
-							<repositoryId>ikube</repositoryId>
-							<url>http://www.ikube.be:8080/artifactory/libs-release-local</url>
+							<packaging>${packaging}</packaging>
+							<generatePom>${generate-pom}</generatePom>
+							<repositoryId>${repository-id}</repositoryId>
+							<url>${artifactory}</url>
 						</configuration>
 					</execution>
 				</executions>
