--- a/code/site/pom.xml
+++ b/code/site/pom.xml
@@ -324,7 +324,7 @@
 		</repository>
 		<repository>
 			<id>ikube</id>
-			<url>http://ikube.be:8080/artifactory/libs-release-local/</url>
+			<url>http://ikube.be/artifactory/libs-release-local/</url>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
