--- a/pom.xml
+++ b/pom.xml
@@ -21,14 +21,13 @@
 		<repository>
 			<id>ikube</id>
 			<name>ikube-releases</name>
-			<url>http://ikube.be:8080/artifactory/libs-release-local</url>
+			<url>http://ikube.be/artifactory/libs-release-local</url>
 		</repository>
 	</distributionManagement>
 
 	<properties>
 		<targetJdk>1.6</targetJdk>
 
-		<!-- <spring.version>3.0.3.RELEASE</spring.version> -->
 		<spring.security.oauth.version>3.19</spring.security.oauth.version>
 		<spring.version>3.0.5.RELEASE</spring.version>
 		<tiles.version>2.1.3</tiles.version>
@@ -57,7 +56,7 @@
 		<module>code/core</module>
 		<module>code/war</module>
 		<module>code/site</module>
-		<!-- <module>code/libs</module> -->
+		<module>code/libs</module>
 		<module>code/tool</module>
 	</modules>
 
@@ -237,7 +236,7 @@
 				<version>2.6</version>
 				<configuration>
 					<forkMode>once</forkMode>
-					<argLine>-javaagent:${settings.localRepository}/org/springframework/spring-agent/2.5.6/spring-agent-2.5.6.jar</argLine>
+					<!-- <argLine>-javaagent:${settings.localRepository}/org/springframework/spring-agent/2.5.6/spring-agent-2.5.6.jar</argLine> -->
 					<includes>
 						<include>**/*Integration*.java</include>
 					</includes>
@@ -289,82 +288,6 @@
 					</execution>
 				</executions>
 			</plugin>
-			
-			<!-- 
-				This plugin	runs an Ant script after the integration tests to deploy ikube.war to the cluster. 
-				The cluster directories are also cleaned, all the wars and exploded directories are deleted before 
-				the deploy. It will also start the Tomcats in the cluster. -->
-			<!-- <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.6</version>
-				<executions>
-					<execution>
-						<id>package-configuration</id>
-						<phase>install</phase>
-						<configuration>
-							<target>
-								<ant antfile="build.xml" target="prepare-everything" inheritrefs="true" />
-							</target>
-						</configuration>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-				</executions>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.ant</groupId>
-						<artifactId>ant-jsch</artifactId>
-						<version>1.8.4</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.ant</groupId>
-						<artifactId>ant-commons-net</artifactId>
-						<version>1.8.4</version>
-					</dependency>
-					<dependency>
-						<groupId>ant</groupId>
-						<artifactId>optional</artifactId>
-						<version>1.5.4</version>
-					</dependency>
-				</dependencies>
-			</plugin> -->
-			
-			<!-- 
-				This plugin will upload the artifacts to Google code, making them available for 
-				download. Unfortunately this can't run in the deploy phase because the artifacts are 
-				still SNAPSHOTS, which is not what is required as a download. 
-			-->
-			<!-- <plugin>
-				<groupId>com.googlecode.maven-gcu-plugin</groupId>
-				<artifactId>maven-gcu-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>gcode-upload</id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>release</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<serverId>googlecode</serverId>
-					<failsOnError>false</failsOnError>
-					<projectName>${project.groupId}</projectName>
-					<uploads>
-						<upload>
-							<file>code/gui/target/ikube-4.0.1.zip</file>
-							<summary>${project.groupId} release ${project.version}</summary>
-							<labels>
-								<label>Featured</label>
-								<label>Type-Archive</label>
-							</labels>
-						</upload>
-					</uploads>
-				</configuration>
-			</plugin> -->
-			
 		</plugins>
 	</build>
 
