Commit for the release.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1140 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/build.properties
+++ b/build.properties
@@ -4,10 +4,7 @@ ikube-configuration-jar=configuration.jar
 sleep=30
 
 target-directory=code/war/target
-configuration-directory=code/core/src/main/resources/ikube
-output-configuration-directory=code/war/target/ikube
-
-tomcat-zip=apache-tomcat-7.0.33.zip
-tomcat-unpacked=apache-tomcat-7.0.33
+configuration-directory=code/libs/src/main/resources/ikube
+output-configuration-directory=${configuration-directory}
 
 verbose=true
