--- a/code/site/pom.xml
+++ b/code/site/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube-site</artifactId>
 	<packaging>war</packaging>
-	<version>4.1.3-SNAPSHOT</version>
+	<version>4.2.0</version>
 
 	<properties>
 		<webapps>webapps</webapps>
