--- a/code/site/pom.xml
+++ b/code/site/pom.xml
@@ -13,6 +13,25 @@
 		<maven.build.timestamp.format>dd-MM-yyyy HH:mm:ss</maven.build.timestamp.format>
 		<spring.version>3.0.5.RELEASE</spring.version>
 	</properties>
+	
+	<scm>
+		<url>https://ikube.googlecode.com/svn/trunk</url>
+		<connection>scm:svn:https://ikube.googlecode.com/svn/trunk</connection>
+		<developerConnection>scm:svn:https://ikube.googlecode.com/svn/trunk</developerConnection>
+	</scm>
+
+	<distributionManagement>
+		<site>
+			<id>ikube</id>
+			<name>ikube-releases</name>
+			<url>file:/home/michael/.m2/repository</url>
+		</site>
+		<repository>
+			<id>ikube</id>
+			<name>ikube-releases</name>
+			<url>http://ikube.be/artifactory/libs-release-local</url>
+		</repository>
+	</distributionManagement>
 
 	<build>
 	    <finalName>site</finalName>
