--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 		<excluded.packages>-Dexcluded.packages=model:Mock:Test:jpa:jaxws</excluded.packages>
 		<included.adapters>-Dincluded.adapters=coverage:complexity:dependency</included.adapters>
 		<serenity.parameters>${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</serenity.parameters>
-		<memory.parameters>-Xms512m -Xmx1024m -XX:PermSize=64m -XX:MaxPermSize=128m</memory.parameters>
+		<memory.parameters>-XX:PermSize=256m -XX:MaxPermSize=512m -Xms1024m -Xmx4096m</memory.parameters>
 
 		<war.base.root>code/war/target/ikube</war.base.root>
 		<postgresql.driver.version>9.1-901-1.jdbc4</postgresql.driver.version>
