Getting ready for another release.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1163 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -13,7 +13,7 @@ buffered.docs=100000
 max.field.length=10000
 max.read.length=10000000
 index.directory.path=./indexes
-index.directory.path.backup=/media/nas/xfs-one/backup
+index.directory.path.backup=${index.directory.path}
 jdbc.batch.size=10000
 internet.batch.size=10000
 file.batch.size=10000
@@ -21,7 +21,7 @@ file.max.read.length=1000000
 throttle=0
 max.actions=1
 # Max index size before another one is started in megs
-max.index.size=3000
+max.index.size=25000
 
 # These are client specific for Lucene
 analyzed=true
@@ -62,7 +62,7 @@ end.tier=20
 delay=600000
 delay-delta=6100000
 # The period between notifications for timed tasks
-period=180000
+period=60000
 period-delta=6100000
 # The maximum age of the GeoSpatial index
 max.age.geospatial=6000
@@ -75,11 +75,6 @@ cpu.load.active=true
 cpu.load.threshold=0.9
 # Whether to use the stop words in the analyzer
 stemming.analyzer.stop.words=false
-
-# These parameters are for the Ikube documentation index
-ikube.url=http://localhost/ikube
-# ikube.url.8080=http://localhost:8080/ikube
-# ikube.url.8080.login=${ikube.url.8080}/admin/login.html
 
 # The H2 database credentials
 h2.jdbc.userid=sa
