--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
-		<version>4.2.1-SNAPSHOT</version>
+		<version>4.2.1</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	
