--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
-		<version>4.2.1</version>
+		<version>4.2.2-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
