--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -125,6 +125,8 @@ ikube.jdbc.driver=${h2.jdbc.driver}
 ikube.jdbc.dictionary=h2(batchLimit=1000)
 ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
 
+max.memory=2000
+
 # Db2 database, this database is for testing essentially as
 # there is always an instance running on the server
 #ikube.dataSource=nonXaDataSourceDb2
